Add notes on numerical implementation.

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -1,1 +1,10 @@
- @book{Lifante_2015, address={Chichester, West Sussex, United Kingdom}, title={Beam propagation method for design of optical waveguide devices}, ISBN={978-1-119-08340-5}, callNumber={621.36}, publisher={John Wiley \& Sons, Inc}, author={Lifante, Ginés}, year={2015}, language={eng}, doi={10.1002/9781119083405}, url={https://dx.doi.org/10.1002/9781119083405} }
+@book{Lifante_2015, address={Chichester, West Sussex, United Kingdom}, title={Beam propagation method for design of optical waveguide devices}, ISBN={978-1-119-08340-5}, callNumber={621.36}, publisher={John Wiley \& Sons, Inc}, author={Lifante, Ginés}, year={2015}, language={eng}, doi={10.1002/9781119083405}, url={https://dx.doi.org/10.1002/9781119083405} }
+
+@article{Chung_Dagli_1991, title={Analysis of Z-invariant and Z-variant semiconductor rib waveguides by explicit finite difference beam propagation method with nonuniform mesh configuration}, volume={27}, rights={https://ieeexplore.ieee.org/Xplorehelp/downloads/license-information/IEEE.html}, ISSN={00189197}, DOI={10.1109/3.97273}, number={10}, journal={IEEE Journal of Quantum Electronics}, author={Chung, Y. and Dagli, N.}, year={1991}, month=oct, pages={2296–2305} }
+
+@phdthesis{masoudi1995parallel,
+	title={Parallel numerical methods for analysing optical devices with the BPM},
+	author={Masoudi, Husain Muhammad Y},
+	year={1995},
+	school={University of Glasgow}
+}
